res/binaryninjacore.h

	
typedef struct BNBinaryView BNBinaryView;
	
typedef struct BNArchitecture BNArchitecture;
	
typedef struct BNFunction BNFunction;
	
typedef struct BNBasicBlock BNBasicBlock;
	
typedef struct BNFlowGraph BNFlowGraph;
	
typedef struct BNFlowGraphLayoutRequest BNFlowGraphLayoutRequest;
	
typedef struct BNSymbol BNSymbol;
	
typedef struct BNLowLevelILFunction BNLowLevelILFunction;
	
typedef struct BNMediumLevelILFunction BNMediumLevelILFunction;
	
typedef struct BNHighLevelILFunction BNHighLevelILFunction;
	
typedef struct BNType BNType;
	
typedef struct BNTypeLibrary BNTypeLibrary;
	
typedef struct BNPlatform BNPlatform;
	
typedef struct BNActivity BNActivity;
	
typedef struct BNAnalysisContext BNAnalysisContext;
	
typedef struct BNAnalysisCompletionEvent BNAnalysisCompletionEvent;
	
typedef struct BNMainThreadAction BNMainThreadAction;
	
typedef struct BNSection BNSection;
	
typedef struct BNSymbolQueue BNSymbolQueue;
	
typedef enum BNBranchType
{
    UnconditionalBranch = 0,
    FalseBranch = 1,
    TrueBranch = 2,
    CallDestination = 3,
    FunctionReturn = 4,
    SystemCall = 5,
    IndirectBranch = 6,
    ExceptionBranch = 7,
    UnresolvedBranch = 127,
    UserDefinedBranch = 128
} BNBranchType;
	
typedef enum BNTokenEscapingType
{
    NoTokenEscapingType = 0,
    BackticksTokenEscapingType = 1,
    QuotedStringEscapingType = 2,
    ReplaceInvalidCharsEscapingType = 3
} BNTokenEscapingType;
	
typedef enum BNTypeClass
{
    VoidTypeClass = 0,
    BoolTypeClass = 1,
    IntegerTypeClass = 2,
    FloatTypeClass = 3,
    StructureTypeClass = 4,
    EnumerationTypeClass = 5,
    PointerTypeClass = 6,
    ArrayTypeClass = 7,
    FunctionTypeClass = 8,
    VarArgsTypeClass = 9,
    ValueTypeClass = 10,
    NamedTypeReferenceClass = 11,
    WideCharTypeClass = 12
} BNTypeClass;
	
typedef enum BNMediumLevelILOperation
{
    MLIL_NOP,
    MLIL_SET_VAR,
    MLIL_SET_VAR_FIELD,
    MLIL_SET_VAR_SPLIT,
    MLIL_LOAD,
    MLIL_LOAD_STRUCT,
    MLIL_STORE,
    MLIL_STORE_STRUCT,
    MLIL_VAR,
    MLIL_VAR_FIELD,
    MLIL_VAR_SPLIT,
    MLIL_ADDRESS_OF,
    MLIL_ADDRESS_OF_FIELD,
    MLIL_CONST,
    MLIL_CONST_DATA,
    MLIL_CONST_PTR,
    MLIL_EXTERN_PTR,
    MLIL_FLOAT_CONST,
    MLIL_IMPORT,
    MLIL_ADD,
    MLIL_ADC,
    MLIL_SUB,
    MLIL_SBB,
    MLIL_AND,
    MLIL_OR,
    MLIL_XOR,
    MLIL_LSL,
    MLIL_LSR,
    MLIL_ASR,
    MLIL_ROL,
    MLIL_RLC,
    MLIL_ROR,
    MLIL_RRC,
    MLIL_MUL,
    MLIL_MULU_DP,
    MLIL_MULS_DP,
    MLIL_DIVU,
    MLIL_DIVU_DP,
    MLIL_DIVS,
    MLIL_DIVS_DP,
    MLIL_MODU,
    MLIL_MODU_DP,
    MLIL_MODS,
    MLIL_MODS_DP,
    MLIL_NEG,
    MLIL_NOT,
    MLIL_SX,
    MLIL_ZX,
    MLIL_LOW_PART,
    MLIL_JUMP,
    MLIL_JUMP_TO,
    MLIL_RET_HINT,
    MLIL_CALL,
    MLIL_CALL_UNTYPED,
    MLIL_CALL_OUTPUT,
    MLIL_CALL_PARAM,
    MLIL_RET,
    MLIL_NORET,
    MLIL_IF,
    MLIL_GOTO,
    MLIL_CMP_E,
    MLIL_CMP_NE,
    MLIL_CMP_SLT,
    MLIL_CMP_ULT,
    MLIL_CMP_SLE,
    MLIL_CMP_ULE,
    MLIL_CMP_SGE,
    MLIL_CMP_UGE,
    MLIL_CMP_SGT,
    MLIL_CMP_UGT,
    MLIL_TEST_BIT,
    MLIL_BOOL_TO_INT,
    MLIL_ADD_OVERFLOW,
    MLIL_SYSCALL,
    MLIL_SYSCALL_UNTYPED,
    MLIL_TAILCALL,
    MLIL_TAILCALL_UNTYPED,
    MLIL_INTRINSIC,
    MLIL_FREE_VAR_SLOT,
    MLIL_BP,
    MLIL_TRAP,
    MLIL_UNDEF,
    MLIL_UNIMPL,
    MLIL_UNIMPL_MEM,
    MLIL_FADD,
    MLIL_FSUB,
    MLIL_FMUL,
    MLIL_FDIV,
    MLIL_FSQRT,
    MLIL_FNEG,
    MLIL_FABS,
    MLIL_FLOAT_TO_INT,
    MLIL_INT_TO_FLOAT,
    MLIL_FLOAT_CONV,
    MLIL_ROUND_TO_INT,
    MLIL_FLOOR,
    MLIL_CEIL,
    MLIL_FTRUNC,
    MLIL_FCMP_E,
    MLIL_FCMP_NE,
    MLIL_FCMP_LT,
    MLIL_FCMP_LE,
    MLIL_FCMP_GE,
    MLIL_FCMP_GT,
    MLIL_FCMP_O,
    MLIL_FCMP_UO,
    MLIL_SET_VAR_SSA,
    MLIL_SET_VAR_SSA_FIELD,
    MLIL_SET_VAR_SPLIT_SSA,
    MLIL_SET_VAR_ALIASED,
    MLIL_SET_VAR_ALIASED_FIELD,
    MLIL_VAR_SSA,
    MLIL_VAR_SSA_FIELD,
    MLIL_VAR_ALIASED,
    MLIL_VAR_ALIASED_FIELD,
    MLIL_VAR_SPLIT_SSA,
    MLIL_CALL_SSA,
    MLIL_CALL_UNTYPED_SSA,
    MLIL_SYSCALL_SSA,
    MLIL_SYSCALL_UNTYPED_SSA,
    MLIL_TAILCALL_SSA,
    MLIL_TAILCALL_UNTYPED_SSA,
    MLIL_CALL_PARAM_SSA,
    MLIL_CALL_OUTPUT_SSA,
    MLIL_LOAD_SSA,
    MLIL_LOAD_STRUCT_SSA,
    MLIL_STORE_SSA,
    MLIL_STORE_STRUCT_SSA,
    MLIL_INTRINSIC_SSA,
    MLIL_FREE_VAR_SLOT_SSA,
    MLIL_VAR_PHI,
    MLIL_MEM_PHI
} BNMediumLevelILOperation;
	
typedef struct BNMediumLevelILInstruction
{
    BNMediumLevelILOperation operation;
    uint32_t attributes;
    uint32_t sourceOperand;
    size_t size;
    uint64_t operands[5];
    uint64_t address;
} BNMediumLevelILInstruction;
	
typedef enum BNVariableSourceType
{
    StackVariableSourceType,
    RegisterVariableSourceType,
    FlagVariableSourceType
} BNVariableSourceType;
	
typedef struct BNVariable
{
    BNVariableSourceType type;
    uint32_t index;
    int64_t storage;
} BNVariable;
	
typedef struct BNQualifiedName
{
    char** name;
    char* join;
    size_t nameCount;
} BNQualifiedName;
	
typedef struct BNTypeWithConfidence
{
    BNType* type;
    uint8_t confidence;
} BNTypeWithConfidence;
	
typedef struct BNBasicBlockEdge
{
    BNBranchType type;
    BNBasicBlock* target;
    bool backEdge;
    bool fallThrough;
} BNBasicBlockEdge;
	
typedef struct BNReferenceSource
{
    BNFunction* func;
    BNArchitecture* arch;
    uint64_t addr;
} BNReferenceSource;
	
typedef struct BNBoolWithConfidence
{
    bool value;
    uint8_t confidence;
} BNBoolWithConfidence;
	
typedef struct BNFunctionParameter
{
    char* name;
    BNType* type;
    uint8_t typeConfidence;
    bool defaultLocation;
    BNVariable location;
} BNFunctionParameter;
	
typedef struct BNQualifiedNameAndType
{
    BNQualifiedName name;
    BNType* type;
} BNQualifiedNameAndType;
	
typedef enum BNBinaryViewEventType
{
    BinaryViewFinalizationEvent,
    BinaryViewInitialAnalysisCompletionEvent
} BNBinaryViewEventType;
	
	BINARYNINJACOREAPI void BNLogRegisterLoggerCallback(void (*cb)(const char* name, void* ctxt), void* ctxt);
	BINARYNINJACOREAPI BNSection** BNGetSectionsAt(BNBinaryView* view, uint64_t addr, size_t* count);
	BINARYNINJACOREAPI void BNFreeSectionList(BNSection** sections, size_t count);
	BINARYNINJACOREAPI void BNRegisterBinaryViewEvent(
	    BNBinaryViewEventType type, void (*callback)(void* ctx, BNBinaryView* view), void* ctx);
	BINARYNINJACOREAPI BNBasicBlock* BNNewBasicBlockReference(BNBasicBlock* block);
	BINARYNINJACOREAPI void BNFreeBasicBlockList(BNBasicBlock** blocks, size_t count);
	BINARYNINJACOREAPI BNBasicBlock** BNGetBasicBlocksForAddress(BNBinaryView* view, uint64_t addr, size_t* count);
	BINARYNINJACOREAPI size_t BNGetLowLevelILForInstruction(BNFunction* func, BNArchitecture* arch, uint64_t addr);
	BINARYNINJACOREAPI BNBasicBlockEdge* BNGetBasicBlockOutgoingEdges(BNBasicBlock* block, size_t* count);
	BINARYNINJACOREAPI void BNFreeBasicBlockEdgeList(BNBasicBlockEdge* edges, size_t count);
	BINARYNINJACOREAPI BNBasicBlock** BNGetBasicBlockDominators(BNBasicBlock* block, size_t* count, bool post);
	BINARYNINJACOREAPI BNReferenceSource* BNGetCodeReferences(BNBinaryView* view, uint64_t addr, size_t* count);
	BINARYNINJACOREAPI void BNFreeCodeReferences(BNReferenceSource* refs, size_t count);
	BINARYNINJACOREAPI BNTypeWithConfidence BNGetVariableType(BNFunction* func, const BNVariable* var);
	BINARYNINJACOREAPI char* BNGetVariableName(BNFunction* func, const BNVariable* var);
	BINARYNINJACOREAPI BNVariable BNFromVariableIdentifier(uint64_t id);
	BINARYNINJACOREAPI BNAnalysisCompletionEvent* BNAddAnalysisCompletionEvent(
	    BNBinaryView* view, void* ctxt, void (*callback)(void* ctxt));
	BINARYNINJACOREAPI void BNFreeQualifiedNameAndType(BNQualifiedNameAndType* obj);
	BINARYNINJACOREAPI void BNFreeQualifiedNameAndTypeArray(BNQualifiedNameAndType* obj, size_t count);
	
	BINARYNINJACOREAPI BNActivity* BNCreateActivity(
	    const char* name, void* ctxt, void (*action)(void*, BNAnalysisContext*));
	BINARYNINJACOREAPI BNFlowGraphLayoutRequest* BNStartFlowGraphLayout(
	    BNFlowGraph* graph, void* ctxt, void (*func)(void* ctxt));
	BINARYNINJACOREAPI BNBasicBlock** BNGetLowLevelILBasicBlockList(BNLowLevelILFunction* func, size_t* count);
	BINARYNINJACOREAPI BNBasicBlock* BNGetLowLevelILBasicBlockForInstruction(BNLowLevelILFunction* func, size_t i);
	BINARYNINJACOREAPI size_t BNGetMediumLevelILInstructionIndex(BNLowLevelILFunction* func, size_t instr);
	BINARYNINJACOREAPI uint64_t* BNMediumLevelILGetOperandList(
	    BNMediumLevelILFunction* func, size_t expr, size_t operand, size_t* count);
	BINARYNINJACOREAPI void BNMediumLevelILFreeOperandList(uint64_t* operands);
	BINARYNINJACOREAPI BNMediumLevelILInstruction BNGetMediumLevelILByIndex(BNMediumLevelILFunction* func, size_t i);
	BINARYNINJACOREAPI size_t BNGetMediumLevelILIndexForInstruction(BNMediumLevelILFunction* func, size_t i);
	BINARYNINJACOREAPI size_t BNGetMediumLevelILInstructionCount(BNMediumLevelILFunction* func);
	BINARYNINJACOREAPI BNBasicBlock* BNGetMediumLevelILBasicBlockForInstruction(
	    BNMediumLevelILFunction* func, size_t i);
	BINARYNINJACOREAPI size_t BNGetMediumLevelILSSAInstructionIndex(BNMediumLevelILFunction* func, size_t instr);
	BINARYNINJACOREAPI size_t BNGetMediumLevelILSSAExprIndex(BNMediumLevelILFunction* func, size_t expr);
	BINARYNINJACOREAPI BNTypeLibrary* BNNewTypeLibraryReference(BNTypeLibrary* lib);
	BINARYNINJACOREAPI BNTypeLibrary* BNLoadTypeLibraryFromFile(const char* path);
	BINARYNINJACOREAPI void BNFreeTypeLibrary(BNTypeLibrary* lib);
	BINARYNINJACOREAPI void BNFreeTypeLibraryList(BNTypeLibrary** lib, size_t count);
	BINARYNINJACOREAPI char* BNGetTypeLibraryName(BNTypeLibrary* lib);
	BINARYNINJACOREAPI BNQualifiedNameAndType* BNGetTypeLibraryNamedObjects(BNTypeLibrary* lib, size_t* count);
	BINARYNINJACOREAPI BNTypeLibrary** BNGetBinaryViewTypeLibraries(BNBinaryView* view, size_t* count);
	BINARYNINJACOREAPI BNType* BNNewTypeReference(BNType* type);
	BINARYNINJACOREAPI BNTypeClass BNGetTypeClass(BNType* type);
	BINARYNINJACOREAPI uint64_t BNGetTypeWidth(BNType* type);
	BINARYNINJACOREAPI size_t BNGetTypeAlignment(BNType* type);
	BINARYNINJACOREAPI BNBoolWithConfidence BNIsTypeSigned(BNType* type);
	BINARYNINJACOREAPI BNBoolWithConfidence BNIsTypeConst(BNType* type);
	BINARYNINJACOREAPI BNTypeWithConfidence BNGetChildType(BNType* type);
	BINARYNINJACOREAPI BNFunctionParameter* BNGetTypeParameters(BNType* type, size_t* count);
	BINARYNINJACOREAPI void BNFreeTypeParameterList(BNFunctionParameter* types, size_t count);
	BINARYNINJACOREAPI char* BNGetTypeString(BNType* type, BNPlatform* platform, BNTokenEscapingType escaping);
	
	BINARYNINJACOREAPI void BNRegisterPluginCommand(const char* name, const char* description,
	    void (*action)(void* ctxt, BNBinaryView* view), bool (*isValid)(void* ctxt, BNBinaryView* view), void* context);
	BINARYNINJACOREAPI void BNRegisterPluginCommandForAddress(const char* name, const char* description,
	    void (*action)(void* ctxt, BNBinaryView* view, uint64_t addr),
	    bool (*isValid)(void* ctxt, BNBinaryView* view, uint64_t addr), void* context);
	BINARYNINJACOREAPI void BNRegisterPluginCommandForRange(const char* name, const char* description,
	    void (*action)(void* ctxt, BNBinaryView* view, uint64_t addr, uint64_t len),
	    bool (*isValid)(void* ctxt, BNBinaryView* view, uint64_t addr, uint64_t len), void* context);
	BINARYNINJACOREAPI void BNRegisterPluginCommandForFunction(const char* name, const char* description,
	    void (*action)(void* ctxt, BNBinaryView* view, BNFunction* func),
	    bool (*isValid)(void* ctxt, BNBinaryView* view, BNFunction* func), void* context);
	BINARYNINJACOREAPI void BNRegisterPluginCommandForLowLevelILFunction(const char* name, const char* description,
	    void (*action)(void* ctxt, BNBinaryView* view, BNLowLevelILFunction* func),
	    bool (*isValid)(void* ctxt, BNBinaryView* view, BNLowLevelILFunction* func), void* context);
	BINARYNINJACOREAPI void BNRegisterPluginCommandForLowLevelILInstruction(const char* name, const char* description,
	    void (*action)(void* ctxt, BNBinaryView* view, BNLowLevelILFunction* func, size_t instr),
	    bool (*isValid)(void* ctxt, BNBinaryView* view, BNLowLevelILFunction* func, size_t instr), void* context);
	BINARYNINJACOREAPI void BNRegisterPluginCommandForMediumLevelILFunction(const char* name, const char* description,
	    void (*action)(void* ctxt, BNBinaryView* view, BNMediumLevelILFunction* func),
	    bool (*isValid)(void* ctxt, BNBinaryView* view, BNMediumLevelILFunction* func), void* context);
	BINARYNINJACOREAPI void BNRegisterPluginCommandForMediumLevelILInstruction(const char* name,
	    const char* description,
	    void (*action)(void* ctxt, BNBinaryView* view, BNMediumLevelILFunction* func, size_t instr),
	    bool (*isValid)(void* ctxt, BNBinaryView* view, BNMediumLevelILFunction* func, size_t instr), void* context);
	BINARYNINJACOREAPI void BNRegisterPluginCommandForHighLevelILFunction(const char* name, const char* description,
	    void (*action)(void* ctxt, BNBinaryView* view, BNHighLevelILFunction* func),
	    bool (*isValid)(void* ctxt, BNBinaryView* view, BNHighLevelILFunction* func), void* context);
	BINARYNINJACOREAPI void BNRegisterPluginCommandForHighLevelILInstruction(const char* name, const char* description,
	    void (*action)(void* ctxt, BNBinaryView* view, BNHighLevelILFunction* func, size_t instr),
	    bool (*isValid)(void* ctxt, BNBinaryView* view, BNHighLevelILFunction* func, size_t instr), void* context);
	BINARYNINJACOREAPI BNMainThreadAction* BNExecuteOnMainThread(void* ctxt, void (*func)(void* ctxt));
	BINARYNINJACOREAPI void BNExecuteOnMainThreadAndWait(void* ctxt, void (*func)(void* ctxt));
	
	BINARYNINJACOREAPI void BNWorkerEnqueue(void* ctxt, void (*action)(void* ctxt));
	BINARYNINJACOREAPI void BNWorkerPriorityEnqueue(void* ctxt, void (*action)(void* ctxt));
	BINARYNINJACOREAPI void BNWorkerInteractiveEnqueue(void* ctxt, void (*action)(void* ctxt));
	BINARYNINJACOREAPI bool BNRunProgressDialog(const char* title, bool canCancel,
		void (*task)(void* taskCtxt, bool(*progress)(void* progressCtxt, size_t cur, size_t max), void* progressCtxt), void* taskCtxt);
	
	BINARYNINJACOREAPI BNSection* BNNewSectionReference(BNSection* section);
	BINARYNINJACOREAPI void BNFreeSection(BNSection* section);
	BINARYNINJACOREAPI char* BNSectionGetType(BNSection* section);
	BINARYNINJACOREAPI void BNAppendSymbolQueue(BNSymbolQueue* queue,
		void (*resolve)(void* ctxt, BNSymbol** symbol, BNType** type), void* resolveContext,
		void (*add)(void* ctxt, BNSymbol* symbol, BNType* type), void* addContext);